samples/_failures_safe/1761224529_1e6736_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d7a4bbf8.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_d7a4bbf8.c:163:24: error: expected expression at end of input
  163 |                        parser->current_token.line,
      |                        ^~~~~~
./samples/SAFE/__tmp_d7a4bbf8.c:163:24: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d7a4bbf8.c:163:24: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d7a4bbf8.c:163:24: error: expected declaration or statement at end of input
